// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackButton should render a negative FeedbackButton 1`] = `
<ToolbarButton
  name="frown-o"
  onClick={[Function]}
  text="negativeRating"
/>
`;

exports[`FeedbackButton should render a positive FeedbackButton 1`] = `
<ToolbarButton
  name="smile-o"
  onClick={[Function]}
  text="positiveRating"
/>
`;
